panko-compiletest/src/snapshots/panko_compiletest__scope-panko__tests__cases__execute__typedef__test_redeclaration_with_same_type.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/typedef/test_redeclaration_with_same_type.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (typedef in_global_scope `long`)
   (typedef in_global_scope `long`)
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (typedef in_local_scope `int`)
         (typedef in_local_scope `int`))))

----- stderr -----
