panko-compiletest/src/snapshots/panko_compiletest__scope-panko__tests__cases__execute__typedef__test_shadow_typedef_in_inner_scope_parenthesised.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/typedef/test_shadow_typedef_in_inner_scope_parenthesised.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (typedef name `int`)
         (compound-statement
            (declaration name~1 `fn() -> int` ∅)
            (expression
               (generic
                  (call (name name~1 `fn() -> int`))
                  (assoc `int` 0))))
         (compound-statement
            (declaration name~2 `fn() -> int` ∅)
            (expression
               (generic
                  (call (name name~2 `fn() -> int`))
                  (assoc `int` 0))))
         (compound-statement
            (definition name~3 `array<int; 42>` ∅)
            (expression (lengthof (name name~3 `array<int; 42>`))))
         (compound-statement
            (definition name~4 `array<int; 42>` ∅)
            (expression (lengthof (name name~4 `array<int; 42>`)))))))

----- stderr -----
