panko-compiletest/src/snapshots/panko_compiletest__scope-panko__tests__cases__execute__typedef__test_shadow_typedef_in_inner_scope_with_function_pointer_value.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/typedef/test_shadow_typedef_in_inner_scope_with_function_pointer_value.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (typedef name `int`)
   (function-definition
      f~0 `fn(name: int) -> int`
      (params
         name~1 `int`)
      (compound-statement
         (return (multiply (name name~1 `int`) 2))))
   (function-definition
      main~2 `fn() -> int`
      (compound-statement
         (definition name~3 `ptr<fn(∅: int) -> int>` (name f~0 `fn(name: int) -> int`))
         (return
            (call (name name~3 `ptr<fn(∅: int) -> int>`)
               21)))))

----- stderr -----
